
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int OptionDef ;


 int check_options (int const*) ;
 int dump_argument (char*) ;
 int fflush (scalar_t__) ;
 int fprintf (scalar_t__,char*) ;
 int fputc (char,scalar_t__) ;
 char* getenv (char*) ;
 int hide_banner ;
 int init_report (char const*) ;
 int locate_option (int,char**,int const*,char*) ;
 int opt_loglevel (int *,char*,char*) ;
 scalar_t__ report_file ;

void parse_loglevel(int argc, char **argv, const OptionDef *options)
{
    int idx = locate_option(argc, argv, options, "loglevel");
    const char *env;

    check_options(options);

    if (!idx)
        idx = locate_option(argc, argv, options, "v");
    if (idx && argv[idx + 1])
        opt_loglevel(((void*)0), "loglevel", argv[idx + 1]);
    idx = locate_option(argc, argv, options, "report");
    if ((env = getenv("FFREPORT")) || idx) {
        init_report(env);
        if (report_file) {
            int i;
            fprintf(report_file, "Command line:\n");
            for (i = 0; i < argc; i++) {
                dump_argument(argv[i]);
                fputc(i < argc - 1 ? ' ' : '\n', report_file);
            }
            fflush(report_file);
        }
    }
    idx = locate_option(argc, argv, options, "hide_banner");
    if (idx)
        hide_banner = 1;
}
